# yao-gpt-service

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json  requirements.txt  ruff.toml  run_frontend.py  streamlit_app.py
deploy/: cloudflared-tunnel.sh  cloudflared.service  dev.sh  nginx.conf  yao-gpt-api.service  yao-gpt-frontend.service
docs/superpowers/specs/: 2026-05-23-prettify-ui-design.md
frontend/: __init__.py  gradio_app.py  run_frontend.py  streamlit_app.py
src/yao_gpt_service/: AGENTS.md  __init__.py  auth.py  config.py  main.py
src/yao_gpt_service/agents/: __init__.py  chatbot_agents.py
src/yao_gpt_service/crews/: __init__.py  chatbot_crew.py
src/yao_gpt_service/db/: __init__.py  memory.py
src/yao_gpt_service/models/: __init__.py  schemas.py
src/yao_gpt_service/tools/: __init__.py  search_tool.py
