[project]
name = "yao-gpt-service"
version = "0.1.0"
description = "Chatbot service using CrewAI and FastAPI"
requires-python = ">=3.11,<3.14"
dependencies = [
    "crewai>=1.14",
    "fastapi>=0.136",
    "uvicorn[standard]>=0.46",
    "pydantic>=2.12",
    "pydantic-settings",
    "tavily-python>=0.7.24",
    "gradio>=5.0",
    "chromadb",
]

[dependency-groups]
dev = [
    "ruff>=0.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yao_gpt_service"]

[tool.pyright]
exclude = [
    "notebooks",
    "scripts",
]
